Setting up packed transfers based off of last year

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>New Window</title>
+    <script src="./src/assets/jquery.min.js"></script>
+    <script src="./src/assets/socket.io.min.js"></script>
+    <script src="./main.js"></script>
   </head>
   <body>
-    <h1 >New Window</h1>
+    <h1>New Window</h1>
     We are using node <script>document.write(process.versions.node)</script>,
     Chrome <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
