--- a/frontend/main.html
+++ b/frontend/main.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>New Window</title>
-    <script src="./src/assets/jquery.min.js"></script>
+    <!-- Insert this line above script imports  -->
+    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+
+    <script src="./src/assets/jquery-3.2.1.min.js"></script>
+
+    <!-- Insert this line after script imports -->
+    <script>if (window.module) module = window.module;</script>
+
     <script src="./src/assets/socket.io.min.js"></script>
+    <script src="./src/assets/popper.js"></script>
+    <script src="./src/assets/bootstrap.min.js"></script>
     <script src="./main.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="src/assets/bootstrap.min.css">
   </head>
   <body>
     <h1>New Window</h1>
