--- a/frontend/main.html
+++ b/frontend/main.html
@@ -41,7 +41,7 @@
     </script>.
 
     <div id="app" />
-    <script src="src/elec_finals/build.js" type="text/javascript"></script>
+    <script src="src/elec_finals/.build.js" type="text/javascript"></script>
 </body>
 
 </html>
