Compiler carries styling over

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -25,21 +25,10 @@
     <script src="./main.js"></script>
 
     <link rel="stylesheet" type="text/css" href="src/assets/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="src/assets/main.css">
 </head>
 
 <body>
-    <h1>New Window</h1>
-    We are using node
-    <script>
-        document.write(process.versions.node)
-    </script>, Chrome
-    <script>
-        document.write(process.versions.chrome)
-    </script>, and Electron
-    <script>
-        document.write(process.versions.electron)
-    </script>.
-
     <div id="app" />
     <script src="src/elec_finals/.build.js" type="text/javascript"></script>
 </body>
