--- a/frontend/main.html
+++ b/frontend/main.html
@@ -18,6 +18,8 @@
     <script>
         if (window.module) module = window.module;
     </script>
+    <link rel="stylesheet" href="./src/assets/reset.css">
+    <link rel="stylesheet" href="./src/assets/main.css">
 
     <script src="./src/assets/socket.io.min.js"></script>
     <script src="./src/assets/popper.js"></script>
@@ -28,17 +30,6 @@
 </head>
 
 <body>
-    <h1>New Window</h1>
-    We are using node
-    <script>
-        document.write(process.versions.node)
-    </script>, Chrome
-    <script>
-        document.write(process.versions.chrome)
-    </script>, and Electron
-    <script>
-        document.write(process.versions.electron)
-    </script>.
 
     <div id="app" />
     <script src="src/elec_finals/.build.js" type="text/javascript"></script>
