Randomized, but dynamically updates

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -23,7 +23,7 @@
     <script src="./src/assets/socket.io.min.js"></script>
     <script src="./src/assets/popper.js"></script>
     <script src="./src/assets/bootstrap.min.js"></script>
-    <script src="./main.js"></script>
+    <!-- script src="./main.js"></script -->
 
     <link rel="stylesheet" type="text/css" href="src/assets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="src/assets/main.css">
