Removing redundancy with jquery

--- a/frontend/src/gamepad/temp_gp-test.html
+++ b/frontend/src/gamepad/temp_gp-test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<script src="./jquery-3.2.1.min.js"></script>
+		<script src="../assets/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="./temp_gp-test.css" type="text/css"></link>
 		<script type="text/javascript" src="./betterlayouts.js" ></script> <!--gp_layouts.js-->
 		<script type="text/javascript" src="./bettergamepad.js" ></script> <!--gp_library.js-->
