Gamepad works with driving, updated, and some binding function tweaks. Also loading in the dearclient versions for applicaiton.py and rov.py so the Surface UI doesn't get an empty object when there's no pi attached (i.e. running on just the laptop)

--- a/surface/frontend/main.html
+++ b/surface/frontend/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>New Window</title>
+    <title>10/10 would compete again</title>
     <!-- Insert this line above script imports  -->
     <script>
         if (typeof module === 'object') {
