--- a/surface/frontend/main.html
+++ b/surface/frontend/main.html
@@ -23,6 +23,8 @@
     <script src="./src/assets/socket.io.min.js"></script>
     <script src="./src/assets/popper.js"></script>
     <script src="./src/assets/bootstrap.min.js"></script>
+    <script src="./src/assets/jcanvas.min.js"></script>
+    <script src="./src/assets/d3/d3.min.js"></script>
     <!-- script src="./main.js"></script -->
 
     <link rel="stylesheet" type="text/css" href="src/assets/bootstrap.min.css">
