--- a/surface/frontend/main2.html
+++ b/surface/frontend/main2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Copilot Window</title>
+    <title>Pilot Main Window</title>
     <!-- Insert this line above script imports  -->
     <script>
         if (typeof module === 'object') {
@@ -31,8 +31,8 @@
 </head>
 
 <body>
-    <div id="app" />
-    <script src="src/elec_finals/.build.js" type="text/javascript"></script>
+    <div id="app2" />
+    <script src="src/elec_finals/.build2.js" type="text/javascript"></script>
 </body>
 
 </html>
